overflow fix

--- a/src/components/Fireworks/Fireworks.css
+++ b/src/components/Fireworks/Fireworks.css
@@ -1,5 +1,4 @@
 body {
-  overflow: hidden;
 }
 
 .pyro > .before,
